# coolchat

./: .env.docker.example  .gitignore  Makefile  README.md  compose.yaml  readme.md
automation/: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yml  conftest.py  pyproject.toml  readme.md
automation/config/: settings.py
automation/reports/: test-report-2024-Oct-16-14:01.html  test-report-2024-Oct-16-14:02.html  test-report-2024-Oct-16-14:06.html  test-report-2024-Oct-16-14:09.html  test-report-2024-Oct-16-14:12.html  test-report-2024-Oct-16-14:13.html  test-report-2024-Oct-16-14:14.html  test-report-2024-Oct-16-14:17.html  test-report-2024-Oct-16-14:19.html  test-report-2024-Oct-16-14:20.html  test-report-2024-Oct-16-14:35.html  test-report-2024-Oct-28-11:31.epub
automation/requirements/: requirements.in  requirements.txt
automation/tests/api/: test_api.py
automation/tests/api/features/: auth.feature  get_messages.feature  refresh.feature
automation/tests/api/services/: backend.py
automation/tests/api/steps/: test_auth.py  test_messages.py  test_refresh.py
automation/tests/ui/: conftest.py
automation/tests/ui/features/: chat.feature  landing.feature  login.feature  logout.feature
automation/tests/ui/pages/: authenticated.py  base.py  chat.py  common.py  home.py  landing.py  log_in.py  log_out.py  sign_in.py  unauthenticated.py
automation/tests/ui/steps/: test_chat.py  test_landing.py  test_login.py  test_logout.py
automation/tests/ui/utils/: name_extractor.py  randomizer.py  screenshots.py
(+69 files in other folders)
