[project]
name = "automation"
description = "A pytest ui/api test automation framework for CoolChat"
readme = "README.md"
authors = [
    { name = "Mauro Garcia Coto" },
]
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = "automation/tests/ui/"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.ruff]
extend-exclude = ["reports"]
